--- a/app/src/main/res/layout/item_bookshelf_list.xml
+++ b/app/src/main/res/layout/item_bookshelf_list.xml
@@ -134,7 +134,7 @@
         android:layout_width="@dimen/desc_icon_size"
         android:layout_height="@dimen/desc_icon_size"
         android:layout_marginLeft="8dp"
-        android:contentDescription="@string/book_search_last"
+        android:contentDescription="@string/lasted_show"
         android:paddingStart="2dp"
         android:paddingEnd="2dp"
         android:src="@drawable/ic_book_last"
@@ -150,7 +150,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:singleLine="true"
-        android:text="@string/book_search_last"
+        android:text="@string/lasted_show"
         android:textColor="@color/tv_text_secondary"
         android:textSize="13sp"
         app:layout_constraintBottom_toBottomOf="parent"
