--- a/app/src/main/res/layout/activity_read.xml
+++ b/app/src/main/res/layout/activity_read.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -9,33 +8,50 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
-    <io.legado.app.ui.widget.TitleBar
-        android:id="@+id/title_bar"
+    <FrameLayout
+        android:id="@+id/fl_menu"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        android:theme="?attr/actionBarStyle"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent"
+        android:visibility="gone">
 
-        <TextView
-            android:id="@+id/tv_chapter_name"
+        <View
+            android:id="@+id/vw_menu_bg"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <io.legado.app.ui.widget.TitleBar
+            android:id="@+id/title_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:text="@string/chapter"
-            android:textSize="12sp" />
+            android:visibility="gone"
+            android:theme="?attr/actionBarStyle">
 
-        <TextView
-            android:id="@+id/tv_chapter_url"
+            <TextView
+                android:id="@+id/tv_chapter_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:text="@string/chapter"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/tv_chapter_url"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:text="@string/chapter"
+                android:textSize="12sp" />
+
+        </io.legado.app.ui.widget.TitleBar>
+
+        <io.legado.app.ui.read.ReadBottomMenu
+            android:id="@+id/bottom_menu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:text="@string/chapter"
-            android:textSize="12sp" />
-
-    </io.legado.app.ui.widget.TitleBar>
-
+            android:layout_gravity="bottom"
+            android:visibility="gone" />
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
