--- a/app/src/main/res/layout/item_book_group.xml
+++ b/app/src/main/res/layout/item_book_group.xml
@@ -3,6 +3,6 @@
     android:id="@+id/tv_group"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/bg_ib_pre"
+    android:background="?android:attr/selectableItemBackground"
     android:layout_margin="5dp"
     android:padding="5dp" />
