--- a/app/src/main/res/layout/item_book_source.xml
+++ b/app/src/main/res/layout/item_book_source.xml
@@ -23,7 +23,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
-        android:background="@drawable/bg_ib_pre_round"
+        android:background="?android:attr/selectableItemBackgroundBorderless"
         android:contentDescription="@string/edit"
         android:padding="8dp"
         android:src="@drawable/ic_edit"
@@ -34,7 +34,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
-        android:background="@drawable/bg_ib_pre_round"
+        android:background="?android:attr/selectableItemBackgroundBorderless"
         android:contentDescription="@string/to_top"
         android:padding="8dp"
         android:src="@drawable/ic_top_source"
@@ -45,7 +45,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
-        android:background="@drawable/bg_ib_pre_round"
+        android:background="?android:attr/selectableItemBackgroundBorderless"
         android:contentDescription="@string/delete"
         android:padding="8dp"
         android:src="@drawable/ic_clear_all"
