--- a/app/src/main/res/layout/item_bookshelf_list_add.xml
+++ b/app/src/main/res/layout/item_bookshelf_list_add.xml
@@ -2,7 +2,7 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:background="@drawable/bg_ib_pre"
+    android:background="?android:attr/selectableItemBackground"
     android:gravity="center"
     android:text="@string/add"
     android:textSize="24sp" />
