--- a/app/src/main/res/layout/item_relace_rule.xml
+++ b/app/src/main/res/layout/item_relace_rule.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="8dp"
-        android:background="@drawable/bg_ib_pre_round"
+        android:background="?android:attr/selectableItemBackgroundBorderless"
         android:contentDescription="@string/edit"
         android:src="@drawable/ic_edit"
         android:visibility="gone"
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="8dp"
-        android:background="@drawable/bg_ib_pre_round"
+        android:background="?android:attr/selectableItemBackgroundBorderless"
         android:contentDescription="@string/delete"
         android:src="@drawable/ic_clear_all"
         android:visibility="gone"
