--- a/app/src/main/res/layout/fragment_chapter_list.xml
+++ b/app/src/main/res/layout/fragment_chapter_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:descendantFocusability="blocksDescendants">
@@ -30,6 +31,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="?android:attr/selectableItemBackgroundBorderless"
             android:ellipsize="middle"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
@@ -45,7 +47,9 @@
             android:background="?android:attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/go_to_top"
             android:src="@drawable/ic_arrow_drop_up"
-            app:tint="@color/tv_text_default" />
+            android:tooltipText="@string/go_to_top"
+            app:tint="@color/tv_text_default"
+            tools:ignore="UnusedAttribute" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/iv_chapter_bottom"
@@ -54,7 +58,9 @@
             android:background="?android:attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/go_to_bottom"
             android:src="@drawable/ic_arrow_drop_down"
-            app:tint="@color/tv_text_default" />
+            android:tooltipText="@string/go_to_bottom"
+            app:tint="@color/tv_text_default"
+            tools:ignore="UnusedAttribute" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
