--- a/app/src/main/res/layout/activity_book_info.xml
+++ b/app/src/main/res/layout/activity_book_info.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -48,12 +49,29 @@
             android:layout_weight="1"
             android:singleLine="true" />
 
-        <TextView
-            android:id="@+id/tv_origin"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:singleLine="true" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_origin"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:singleLine="true"
+                tools:ignore="NestedWeights" />
+
+            <TextView
+                android:id="@+id/tv_change_source"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:text="@string/change_origin" />
+
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/ll_kind"
