--- a/app/src/main/res/layout/dialog_change_source.xml
+++ b/app/src/main/res/layout/dialog_change_source.xml
@@ -13,5 +13,11 @@
         app:fitStatusBar="false"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/tool_bar"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
