--- a/app/src/main/res/layout/dialog_change_source.xml
+++ b/app/src/main/res/layout/dialog_change_source.xml
@@ -9,6 +9,8 @@
         android:id="@+id/tool_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/background"
+        android:elevation="5dp"
         app:displayHomeAsUp="false"
         app:fitStatusBar="false"
         app:layout_constraintTop_toTopOf="parent" />
