--- a/app/src/main/res/menu/read_book.xml
+++ b/app/src/main/res/menu/read_book.xml
@@ -5,64 +5,64 @@
 
     <group android:id="@+id/menuOnLine">
         <item
-            android:id="@+id/action_change_source"
+            android:id="@+id/menu_change_source"
             android:icon="@drawable/ic_exchange"
             android:title="@string/change_origin"
             app:showAsAction="always" />
 
         <item
-            android:id="@+id/action_refresh"
+            android:id="@+id/menu_refresh"
             android:icon="@drawable/ic_refresh_black_24dp"
             android:title="@string/refresh"
             app:showAsAction="ifRoom" />
 
         <item
-            android:id="@+id/action_download"
+            android:id="@+id/menu_download"
             android:icon="@drawable/ic_download_line"
             android:title="@string/download_offline"
             app:showAsAction="ifRoom" />
 
         <item
-            android:id="@+id/disable_book_source"
+            android:id="@+id/menu_disable_book_source"
             android:icon="@drawable/ic_cancel"
             android:title="@string/disable_book_source"
             app:showAsAction="never" />
 
     </group>
 
-    <group android:id="@+id/menu_text">
+    <group android:id="@+id/menu_group_text">
         <item
-            android:id="@+id/action_set_regex"
+            android:id="@+id/menu_set_regex"
             android:icon="@drawable/ic_exchange"
             android:title="@string/txt_chapter_regex"
             app:showAsAction="always" />
     </group>
 
-    <group android:id="@+id/menuLocal">
+    <group android:id="@+id/menu_group_local">
 
         <item
-            android:id="@+id/action_set_charset"
+            android:id="@+id/menu_set_charset"
             android:icon="@drawable/ic_translate"
             android:title="@string/set_charset"
             app:showAsAction="ifRoom" />
 
     </group>
 
-    <group android:id="@+id/menuShow">
+    <group android:id="@+id/menu_group_show">
         <item
-            android:id="@+id/add_bookmark"
+            android:id="@+id/menu_add_bookmark"
             android:icon="@drawable/ic_bookmark"
             android:title="@string/bookmark_add"
             app:showAsAction="ifRoom" />
 
         <item
-            android:id="@+id/action_copy_text"
+            android:id="@+id/menu_copy_text"
             android:icon="@drawable/ic_copy"
             android:title="@string/copy_text"
             app:showAsAction="ifRoom" />
 
         <item
-            android:id="@+id/enable_replace"
+            android:id="@+id/menu_enable_replace"
             android:icon="@drawable/ic_find_replace"
             android:title="@string/replace_rule_title"
             android:checkable="true"
@@ -70,21 +70,21 @@
             app:showAsAction="never" />
 
         <item
-            android:id="@+id/update_chapter_list"
+            android:id="@+id/menu_update_chapter_list"
             android:icon="@drawable/ic_update"
             android:title="@string/update_chapter"
             app:showAsAction="never" />
 
         <item
-            android:id="@+id/action_book_info"
+            android:id="@+id/menu_book_info"
             android:icon="@drawable/ic_toc"
             android:title="@string/book_info"
             app:showAsAction="never" />
     </group>
 
-    <group android:id="@+id/menu_login">
+    <group android:id="@+id/menu_group_login">
         <item
-            android:id="@+id/action_login"
+            android:id="@+id/menu_login"
             android:icon="@drawable/ic_toc"
             android:title="@string/login"
             app:showAsAction="never" />
