--- a/app/src/main/res/layout/activity_read_book.xml
+++ b/app/src/main/res/layout/activity_read_book.xml
@@ -4,7 +4,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <io.legado.app.ui.widget.page.ContentView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="invisible" />
+
     <io.legado.app.ui.widget.page.PageView
+        android:id="@+id/page_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
