--- a/app/src/main/res/layout/activity_read_book.xml
+++ b/app/src/main/res/layout/activity_read_book.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical">
 
     <io.legado.app.ui.widget.page.ContentView
+        android:id="@+id/content_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="invisible" />
